--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
-body,h1,h2{font-family: "Raleway", sans-serif}
+body,h1,h2{font-family: Arial, Helvetica, sans-serif}
 body, html {height: 100%}
 p {line-height: 2}
-.bgimg, .bgimg2, .bgimg3, .bgimg4 {
+.bgimg2, .bgimg3, .bgimg4 {
   min-height: 100%;
   background-position: center;
   background-size: cover;
 }
-.bgimg {background-image: url("/img/FJn5.jpg")}
+/*.bgimg, .bgimg {background-image: url("/img/FJn5.jpg")} */
 .bgimg2 {background-image: url("/img/FJn4.jpg")}
+/* .gradientDark{
+  background: #76704c96;
+  border-radius: 30px;
+} */
 
+.w3-pale-red{
+  color: #000 !important;
+  background-color: #eead69 !important;
+}
 
+/* Circle transition */
 .profile-area{display:flex;justify-content:center;align-items:center}
 .profile-area .outer-circle{width:26rem;height:26rem;border:1px solid var(--color-primary);border-radius:50%;position:relative;animation:move 30s linear infinite}
 @keyframes move {
